--- a/Software/CANController/CanDetail.xaml
+++ b/Software/CANController/CanDetail.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CANController"
         mc:Ignorable="d"
         x:Name="CANInfo"
-        Title="CanDetail" Height="567" Width="1008">
+        Title="Can详细信息" Height="567" Width="1008">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.55*"/>
