--- a/Software/CANController/DBCSimulation.xaml
+++ b/Software/CANController/DBCSimulation.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CANController"
         mc:Ignorable="d"
-        Title="DBCSimulation" Height="500" Width="800">
+        Title="DBC仿真模拟" Height="500" Width="800">
     <Grid>
         <ScrollViewer>
             <StackPanel x:Name="Panel">
