--- a/Software/CANController/DataDraw.xaml
+++ b/Software/CANController/DataDraw.xaml
@@ -6,9 +6,9 @@
         xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:local="clr-namespace:CANController"
         mc:Ignorable="d"
-        Height="350" Width="400">
+        Title="数据折线图" Height="350" Width="600">
     <Grid>
-        <lvc:CartesianChart Series="{Binding LineSeriesCollection}" LegendLocation="Right" FontSize="10">
+        <lvc:CartesianChart Series="{Binding LineSeriesCollection}" Zoom="X" FontSize="10" MouseRightButtonDown="CartesianChart_MouseRightButtonDown">
             <lvc:CartesianChart.AxisX>
                 <lvc:Axis LabelFormatter="{Binding CustomFormatterX}"  MaxValue="{Binding AxisXMax}" MinValue="{Binding AxisXMin}">
                     <lvc:Axis.Separator>
