--- a/Software/CANController/MainWindow.xaml
+++ b/Software/CANController/MainWindow.xaml
@@ -135,9 +135,9 @@
                             <RowDefinition/>
                             <RowDefinition Height="0.7*"/>
                         </Grid.RowDefinitions>
-                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="0" Background="White" BorderThickness="0" Content="20.5" FontSize="40" Margin="15" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bahnschrift SemiBold"/>
+                        <Button x:Name="DRTEMAdd" Template="{DynamicResource CarButtonTemplate}" Grid.Row="0" Background="White" BorderThickness="0" Content="20.5" FontSize="40" Margin="15" HorizontalAlignment="Left" VerticalAlignment="Bottom" FontFamily="Bahnschrift SemiBold"/>
                         <TextBlock Grid.Row="1" Background="White" Text="20.0" FontSize="64" Margin="20" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="2" Background="White" BorderThickness="0" Content="19.5" FontSize="40" Margin="15" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold"/>
+                        <Button x:Name="DRTEMMinus" Template="{DynamicResource CarButtonTemplate}" Grid.Row="2" Background="White" BorderThickness="0" Content="19.5" FontSize="40" Margin="15" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold"/>
                     </Grid>
                 </Border>
                 <Border Grid.Column="2" CornerRadius="160,25,25,160" Margin="30" Opacity="0.8" Background="White">
@@ -147,9 +147,9 @@
                             <RowDefinition/>
                             <RowDefinition Height="0.7*"/>
                         </Grid.RowDefinitions>
-                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="0" Background="White" BorderThickness="0" Content="20.5" FontSize="40" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Bahnschrift SemiBold"/>
+                        <Button x:Name="PGTEMAdd" Template="{DynamicResource CarButtonTemplate}" Grid.Row="0" Background="White" BorderThickness="0" Content="20.5" FontSize="40" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Bahnschrift SemiBold"/>
                         <TextBlock Grid.Row="1" Background="White" Text="20.0" FontSize="64" Margin="20" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                        <Button Template="{DynamicResource CarButtonTemplate}" Grid.Row="2" Background="White" BorderThickness="0" Content="19.5" FontSize="40" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold"/>
+                        <Button x:Name="PGTEMMinus" Template="{DynamicResource CarButtonTemplate}" Grid.Row="2" Background="White" BorderThickness="0" Content="19.5" FontSize="40" Margin="15" HorizontalAlignment="Right" VerticalAlignment="Top" FontFamily="Bahnschrift SemiBold"/>
                     </Grid>
                 </Border>
             </Grid>
